force-app/main/default/objects/Sales_Order_Line__c/Sales_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Sales Order Line</label>
    <nameField>
        <label>Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>