force-app/main/default/objects/Sales_Order_Line__c/fields/Cost_Base__c.field-meta.xml
<CustomField>
    <fullName>Cost_Base__c</fullName>
    <label>Unit Cost (Base)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>