force-app/main/default/objects/Sales_Order_Line__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <formula>ROUND(Subtotal__c - Total_Price__c, 2)</formula>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>