force-app/main/default/objects/Sales_Order_Line__c/fields/Line_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Line_Gross_Margin__c</fullName>
    <formula>IF(
  Total_Price__c &gt; 0,
  (Total_Price__c - Total_Cost__c) / Total_Price__c,
  0
)</formula>
    <label>Line Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>