force-app/main/default/objects/Sales_Order_Line__c/fields/Line_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Line_Gross_Profit__c</fullName>
    <formula>Total_Price__c - Total_Cost__c</formula>
    <label>Line Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>