force-app/main/default/objects/Sales_Order_Line__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <label>Line Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>