force-app/main/default/objects/Sales_Order_Line__c/fields/Line_Match_Key__c.field-meta.xml
<CustomField>
    <fullName>Line_Match_Key__c</fullName>
    <externalId>true</externalId>
    <label>Line Match Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>