force-app/main/default/objects/Sales_Order_Line__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <formula>ROUND( ROUND(Unit_Price__c, 2) * Quantity__c, 2 )</formula>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>