force-app/main/default/objects/Sales_Order_Line__c/fields/Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount__c</fullName>
    <formula>IF(Taxable__c, Total_Price__c, 0)</formula>
    <label>Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>