force-app/main/default/objects/Sales_Order_Line__c/fields/Unit_Base__c.field-meta.xml
<CustomField>
    <fullName>Unit_Base__c</fullName>
    <label>Unit Base</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>