force-app/main/default/objects/Sales_Order_Line__c/fields/Unit_Net__c.field-meta.xml
<CustomField>
    <fullName>Unit_Net__c</fullName>
    <formula>IF(
  Use_Per_Unit_Pricing__c,
  /* Discount defined per unit */
  CASE(
    Discount_Type__c,
    &quot;Fixed&quot;,       MAX(0, Unit_Price__c - Discount_Value__c),
    &quot;Percentage&quot;,  MAX(0, Unit_Price__c * (1 - (Discount_Value__c / 100))),
    Unit_Price__c
  ),
  /* Legacy: spread fixed discount across the quantity */
  CASE(
    Discount_Type__c,
    &quot;Fixed&quot;,       MAX(0, Unit_Price__c - (Discount_Value__c / MAX(1, Quantity__c))),
    &quot;Percentage&quot;,  MAX(0, Unit_Price__c * (1 - (Discount_Value__c / 100))),
    Unit_Price__c
  )
)</formula>
    <label>Unit Net</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>