force-app/main/default/objects/Sales_Order_Line__c/fields/Use_Per_Unit_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Use_Per_Unit_Pricing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Per Unit Pricing</label>
    <type>Checkbox</type>
</CustomField>